fix footer spacing

--- a/src/less/components/Footer.less
+++ b/src/less/components/Footer.less
@@ -1,11 +1,11 @@
 footer {
 	display: block;
-	padding-top: 20px;
 	margin: 0 -8px -8px;
 	padding: 0 1rem;
 	max-width: 100vw;
 
 	padding-top: 1rem;
+	margin-top: 1rem;
 	flex-shrink: 0;
 	font-family: var(--font_body);
 
